--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,4 +5,4 @@ homepage: https://github.com/angeldollface/securitycheck
 environment:
   sdk: '>=2.12.0 <3.0.0'
 dev_dependencies:
-  pedantic: ^1.11.0
+  lint: ^2.0.1
